# context-first-arch

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  one-term-project.json  pyproject.toml
.agentcockpit/: snapshots.json
.claude/: .onboarding_status  FEATURES.md  config.json  current-task.md  decisions.md  map.md  memories.json  project-status.md  settings.json
.claude/hooks/: README.md  cfa_audit.py  cfa_enforce.py  cfa_hooks_config.json  cfa_smart_suggestions.py  cfa_validator.py  pre-commit-new.sh  pre-commit.sh
.claude/skills/: cfa-status.md
claudedocs/: CFA_v2_Architecture.md  Serena_Integration.md  mcp-reconnection-fix.md  nova-architecture.md  nova-migration-notes.md
contracts/: safe_points.contract.md
src/cfa_v4/: README.md  __init__.py  install.py  server.py
src/cfa_v4/templates/: current-task.md.template  decisions.md.template  map.md.template  settings.json.template
src/cfa_v4/tools/: __init__.py  checkpoint.py  memory.py  onboard.py
src/core/: __init__.py  context_optimizer.py  contract_parser.py  docs_generator.py  map_generator.py  migrator.py  pattern_detector.py  project.py  task_tracker.py  test_analyzer.py  transformations.py  transformations_nextjs.py
src/core/analyzers/: __init__.py  base.py  python_analyzer.py  rust_analyzer.py  typescript_analyzer.py
src/core/lsp/: __init__.py  symbols.py
src/core/orchestration/: __init__.py  executor.py  loop_manager.py  models.py  objective_manager.py  safe_points.py  storage.py
src/core/workflow/: __init__.py  onboarding.py
src/features/: __init__.py
src/features/analysis/: __init__.py
src/features/analysis/core/: __init__.py  base.py  coupling_analyzer.py  dependency_analyzer.py  impact_analyzer.py  python_analyzer.py  rust_analyzer.py  typescript_analyzer.py
src/features/analysis/tools/: __init__.py  coupling_analyze.py  dependency_analyze.py  impact_analyze.py  pattern_detect.py
src/features/contract/: __init__.py
src/features/contract/core/: __init__.py
src/features/contract/tools/: __init__.py  contract_create.py  contract_diff.py  contract_sync.py  contract_validate.py
src/features/file/: __init__.py
src/features/file/tools/: __init__.py  file_create.py  file_list.py  file_read.py  file_search.py
src/features/knowledge_graph/: __init__.py
src/features/knowledge_graph/core/: __init__.py  business_rules.py  chunker.py  compressor.py  git_chunker.py  graph_builder.py  models.py  retriever.py  storage.py  timeline.py  watcher.py
src/features/knowledge_graph/tools/: __init__.py  kg_blame.py  kg_build.py  kg_diff.py  kg_expand.py  kg_get.py  kg_history.py  kg_omitted.py  kg_related.py  kg_retrieve.py  kg_search.py  kg_status.py  kg_watch.py
src/features/memory/: __init__.py
src/features/memory/core/: __init__.py  memory_store.py
src/features/memory/tests/: __init__.py  test_memory_store.py
src/features/memory/tools/: __init__.py  memory_delete.py  memory_get.py  memory_list.py  memory_search.py  memory_set.py
src/features/orchestration/: __init__.py
src/features/orchestration/core/: __init__.py  router.py  safe_points.py  storage.py
src/features/orchestration/tools/: __init__.py  agent_route.py  agent_spawn.py  agent_status.py  config_activate_prompt.py  config_get_active.py  config_list_mcp_configs.py  config_list_prompts.py  config_update_mcp_config.py  config_update_prompt.py  loop_configure.py  loop_iterate.py  loop_status.py  loop_stop.py  objective_achieve_checkpoint.py  objective_check.py  objective_define.py  objective_fail.py  objective_record_iteration.py  safe_point_create.py  safe_point_list.py  safe_point_rollback.py
src/features/rules/: __init__.py
src/features/rules/tools/: __init__.py  rule_batch.py  rule_confirm.py  rule_interpret.py  rule_list.py
src/features/symbol/: __init__.py
src/features/symbol/core/: __init__.py  manager.py  symbols.py
src/features/symbol/tools/: __init__.py  lsp_manage.py  symbol_find.py  symbol_insert.py  symbol_overview.py  symbol_references.py  symbol_rename.py  symbol_replace.py
src/features/timeline/: __init__.py
src/features/timeline/tools/: __init__.py  timeline_checkpoint.py  timeline_compare.py  timeline_rollback.py
src/features/workflow/: __init__.py
src/features/workflow/core/: __init__.py  reflection.py
src/features/workflow/tools/: __init__.py  workflow_instructions.py  workflow_onboard.py  workflow_reflect.py  workflow_summarize.py
src/mcp_server/: __init__.py  server.py  sse_server.py
src/mcp_server/tools/: __init__.py  agent_route.py  agent_spawn.py  agent_status.py  context_load.py  context_optimize.py  contract_check_breaking.py  contract_create.py  contract_diff.py  contract_sync.py  contract_validate.py  coupling_analyze.py  decision_add.py  dependency_analyze.py  docs_generate.py  file_edit_lines.py  file_find.py  file_lines_delete.py  file_lines_insert.py  file_lines_replace.py  file_replace.py  impact_analyze.py  kg_blame.py  kg_build.py  kg_diff.py  kg_expand.py  kg_get.py  kg_history.py  kg_omitted.py  kg_related.py  kg_retrieve.py  kg_search.py  kg_status.py  loop_configure.py  loop_iterate.py  loop_status.py  loop_stop.py  lsp_manage.py  map_auto_update.py  memory_delete.py  (+40 more)
src/shared/: __init__.py
src/shared/types/: __init__.py
src/shared/utils/: __init__.py
templates/: contract.md.template  current-task.md.template  decisions.md.template  map.md.template
tests/: __init__.py  conftest.py  test_checkpoint.py  test_memory.py  test_onboard.py
