[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-first-architecture"
version = "4.0.0"
description = "CFA v4: Minimalist 4-tool AI-assisted development framework. Architecture over indexing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["llm", "architecture", "mcp", "claude", "ai", "development"]
authors = [
    { name = "Context-First Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
cfa4 = "src.cfa_v4.server:run"
cfa4-server = "src.cfa_v4.server:run"
cfa4-install = "src.cfa_v4.install:main"

[project.urls]
Documentation = "https://github.com/context-first/context-first-architecture#readme"
Issues = "https://github.com/context-first/context-first-architecture/issues"
Source = "https://github.com/context-first/context-first-architecture"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
